# SDLE

./: .gitignore  README.md
doc/: buildAndRunInstructions.md  projectOverview.md
src/backend/: .gitignore  CMakeLists.txt
src/backend/admin_console/: AdminConsole.h  ProcessManager.cpp  ProcessManager.h  RouterClient.cpp  RouterClient.h  TopologyManager.cpp  TopologyManager.h  main.cpp
src/backend/client_cli/: ClientCLI.cpp  ClientCLI.h  ShoppingListClient.cpp  ShoppingListClient.h  main.cpp
src/backend/common/: HashRing.cpp  HashRing.h  Logger.cpp  Logger.h  Metadata.cpp  Metadata.h  Protocol.cpp  Protocol.h  VNode.cpp  VNode.h
src/backend/config/: topology.json
src/backend/crdt/: CRDTCounter.h  CRDTFlag.h  CRDTSet.h  CRDTShoppingList.cpp  CRDTShoppingList.h
src/backend/node_server/: NodeServer.cpp  NodeServer.h  Storage.h  config.json  main.cpp
src/backend/router_server/: RouterServer.h  config.json  main.cpp
src/backend/tests/: run_system_test.sh  system_test_client.cpp
src/backend/tests/crdt/: CounterTest.cpp  FlagTest.cpp  SetTest.cpp  ShoppingListTest.cpp
src/shopping-list-app/: package-lock.json  package.json
src/shopping-list-app/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/shopping-list-app/app/api/zmq/: route.ts
src/shopping-list-app/components/: ItemEditor.module.css  ItemEditor.tsx  ItemList.module.css  ItemList.tsx  ListSelector.module.css  ListSelector.tsx  ListView.module.css  ListView.tsx  SyncIndicator.module.css  SyncIndicator.tsx  Toast.module.css  Toast.tsx  TopBar.module.css  TopBar.tsx
src/shopping-list-app/services/: shoppingListService.ts
src/shopping-list-app/types/: ShoppingListTypes.ts  zeromq.d.ts
